# green

./: .gitignore  .tool-versions  CLAUDE.md  Cargo.toml  README.md  biome.json  build.rs  config.dev.toml  config.toml  config.toml.example  deno.json  flake.nix  justfile  logs.ndjson  package.json  secrets.toml.example  tsconfig.json
.claude/: settings.local.json
assets/css/: base.css  breaker.css  index.css  l33t.css  logs.css  mqtt.css  notes.css  qr.css  recipes.css  services.css  tailscale.css
assets/favicon/: about.txt  site.webmanifest
assets/js/: auth-login.js  auth-recover.js  auth-register.js  logs.js  mqtt-devices.js  mqtt.js  nav.js  services.js
fixtures/: breaker_box.md  breaker_details.json  breaker_details.toml  ping_webhook.json  testCA.pem
fixtures/vault/: Chocolate Cake.md  Pasta Carbonara.md  both-tagged.md  gm-notes.md  session-1.md  the-known-world.md  untagged.md
migrations/: 0001_users.sql  0002_passkeys.sql  0003_mqtt_devices.sql  0004_mqtt_devices_pattern.sql
plans/: multi-machine.md
scripts/: dev.nu  green.nu  logs.kdl  phone.kdl  server.nu
scripts/hooks/: pre-push
src/: auth.rs  breaker.rs  breaker_detail.rs  error.rs  index.rs  io.rs  logs.rs  main.rs  mqtt.rs  notes.rs  qr.rs  recipes.rs  route.rs  services.rs  tailscale.rs  text.rs  ultron.rs
src/deployments/: github.rs  mod.rs  nix.rs
src/js/: auth-login.ts  auth-register.ts  logs.ts  mqtt-devices.ts  mqtt.ts  nav.ts  services.ts
src/notes/: dnd.rs  mod.rs  obsidian.rs  recipes.rs
templates/: auth_login.html  auth_recover.html  auth_register.html  base.html  breaker.html  index.html  logs_app.html  logs_errors.html  mqtt.html  mqtt_devices.html  notes_detail.html  notes_index.html  qr.html  recipes_detail.html  recipes_index.html  services.html  tailscale.html
templates/partials/: breaker_detail.html
test/css/: check-css.test.ts
test/js/: auth-login.test.js  auth-login.test.ts  auth-recover.test.js  auth-register.test.js  auth-register.test.ts  logs.test.ts  mqtt-devices.test.ts  mqtt.test.js  mqtt.test.ts  nav.test.ts  services.test.ts
