[package]
name = "green"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.14.0"
axum = { version = "0.8.4", features = [ "json" ]}
clap = { version = "4.5.41", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["into_iterator"] }
futures = "0.3.31"
git2 = "0.20.2"
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.140"
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.12"
time = { version = "0.3.44", features = ["macros", "local-offset", "serde", "parsing", "formatting"] }
tokio = { version = "1.46.1", features = [
  "tracing",
  "rt",
  "rt-multi-thread",
  "test-util",
  "tokio-macros",
  "io-std",
  "net",
  "macros",
  "full",
] }
toml = "0.9.2"
tower = { version = "0.5.2", features = ["tokio", "tracing"] }
tower-http = { version = "0.6.6", features = ["fs", "trace", "tracing"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
  "json",
  "tracing",
  "serde",
  "serde_json",
  "env-filter",
] }
url = { version = "2.5.7", features = ["serde"] }

[dev-dependencies]
insta = { version = "1.43.2", features = ["json", "toml", "redactions"] }
tracing-test = "0.2.5"
