[package]
name = "green"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.14.0"
axum = "0.8.4"
clap = { version = "4.5.41", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["into_iterator"] }
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = [
  "tracing",
  "rt",
  "rt-multi-thread",
  "test-util",
  "tokio-macros",
  "io-std",
  "net",
  "macros",
  "full",
] }
pulldown-cmark = "0.13"
serde_yml = "0.0.12"
walkdir = "2"
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
toml = "0.9.2"
tower = { version = "0.5.2", features = ["tokio", "tracing"] }
webauthn-rs = { version = "0.5", features = ["conditional-ui"] }
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "uuid", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
axum-extra = { version = "0.10", features = ["cookie"] }
url = "2"
time = "0.3"
reqwest = { version = "0.12", features = ["json"] }
rumqttc = "0.24"
prometheus = "0.13"
tower-http = { version = "0.6.6", features = ["fs", "trace", "tracing"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
  "json",
  "tracing",
  "serde",
  "serde_json",
  "env-filter",
] }
bon = "3.9.1"

[dev-dependencies]
insta = "1.46.3"
tempfile = "3"
